--- a/ta26_1/src/main/resources/application.properties
+++ b/ta26_1/src/main/resources/application.properties
@@ -8,14 +8,14 @@ spring.datasource.url=jdbc:mysql://192.168.4.105:3306/db_ud26
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
 spring.datasource.username=remote
 spring.datasource.password=P@ssw0rd_Remote
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 
 #Imprime en tu consola las instrucciones hechas en tu base de datos.
 #Configuraciones JPA
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 #Puerto del servidor Tomcat
 server.port=8181
