--- a/ta26_4/src/main/resources/application.properties
+++ b/ta26_4/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=P@ssw0rd_Remote
 #Configuraciones JPA
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #Puerto del servidor Tomcat
 server.port=8181
